MDEV-22761: innodb row_search_idx_cond_check handle CHECK_ABORTED_BY_USER

handler_rowid_filter_check can return CHECK_ABORTED_BY_USER.

All the functions that call row_search_idx_cond_check handle the
CHECK_ABORTED_BY_USER return value. So return it rather than generating an
error.

This incorrect handling was introduced in MDEV-21794 (8d85715d507d).

Reviewer: Marko Mäkelä